added media folder, tested media folder and url, added celery task,  added fabfile, video can be now viewed through the webapp.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -59,32 +59,7 @@ RUN pip install --upgrade pip \
                           boto3 \
                           protobuf \
                           humanize
-RUN apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8
-RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main" > /etc/apt/sources.list.d/pgdg.list
-RUN apt-get update && apt-get install -y python-software-properties software-properties-common postgresql-9.4 postgresql-client-9.4 postgresql-contrib-9.4
-USER postgres
-RUN /etc/init.d/postgresql start &&\
-    psql --command "CREATE USER docker WITH SUPERUSER PASSWORD 'docker';" &&\
-    psql --command "CREATE USER dvauser WITH PASSWORD 'localpass';ALTER ROLE dvauser SET client_encoding TO 'utf8';ALTER ROLE dvauser SET default_transaction_isolation TO 'read committed';ALTER ROLE dvauser SET timezone TO 'UTC';" &&\
-    createdb -O docker docker &&\
-    createdb -O dvauser dvadb &&\
-    psql --command "GRANT ALL PRIVILEGES ON DATABASE dvadb TO dvauser;"
-RUN echo "host all  all    0.0.0.0/0  md5" >> /etc/postgresql/9.4/main/pg_hba.conf
-RUN echo "listen_addresses='*'" >> /etc/postgresql/9.4/main/postgresql.conf
-USER root
-RUN wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | apt-key add - && \
-  echo "deb http://www.rabbitmq.com/debian/ testing main" > /etc/apt/sources.list.d/rabbitmq.list && \
-  apt-get update && \
-  DEBIAN_FRONTEND=noninteractive apt-get install -y rabbitmq-server && \
-  rm -rf /var/lib/apt/lists/* && \
-  rabbitmq-plugins enable rabbitmq_management && \
-  echo "[{rabbit, [{loopback_users, []}]}]." > /etc/rabbitmq/rabbitmq.config
-ENV RABBITMQ_LOG_BASE /data/log
-ENV RABBITMQ_MNESIA_BASE /data/mnesia
 ARG CACHE_DATE=not_a_date
 RUN  git clone https://github.com/akshayubhat/DeepVideoAnalytics /root/DVA
 WORKDIR "/root/DVA"
-COPY container_scripts/start_django_docker.sh start_server.sh
-VOLUME  ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql","/data/log", "/data/mnesia"]
-USER postgres
-CMD ["/usr/lib/postgresql/9.4/bin/postgres", "-D", "/var/lib/postgresql/9.4/main", "-c", "config_file=/etc/postgresql/9.4/main/postgresql.conf"]
+CMD ["sleep","999"]
