docker compose start server wait 60 seconds and then automatically performs migrations

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@
        - RABBITMQ_DEFAULT_PASS=localpass
    web:
      build: .
-     command: python manage.py runserver 0.0.0.0:8000
+     command: fab start_server_container
      ports:
        - "8000:8000"
      depends_on:
