--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@
        - RABBITMQ_DEFAULT_PASS=localpass
    web:
      build: .
-     command: fab start_server_container
+     command: git pull && fab start_server_container
      ports:
        - "8000:8000"
      depends_on:
