single migrate added youtube-dl

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -59,5 +59,8 @@ RUN pip install --upgrade pip \
                           boto3 \
                           protobuf \
                           humanize
-RUN  git clone https://github.com/akshayubhat/DeepVideoAnalytics /root/DVA
+RUN wget https://yt-dl.org/downloads/latest/youtube-dl -O /bin/youtube-dl
+RUN chmod a+rx /bin/youtube-dl
+RUN youtube-dl -U
+RUN git clone https://github.com/akshayubhat/DeepVideoAnalytics /root/DVA
 WORKDIR "/root/DVA"
