feature extraction remaining code works

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ logs/*.log
 /db.sqlite3
 /resources/
 temp_data/*.mp4
+/tests/Goldeneye.mp4
+/tests/test.png
+/tests/WorldIsNotEnough.mp4
+/tests/TomorrowNeverDies.mp4
